[gd_scene load_steps=6 format=2]

[ext_resource path="res://bullet/particles_material/shotgun_bullet.tres" type="Material" id=1]
[ext_resource path="res://bullet/enemy_bullet.gd" type="Script" id=2]
[ext_resource path="res://bullet/art/enemy_bullet/shotgun_bullet/particle.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 50.0

[node name="bullet" type="RigidBody2D"]
show_behind_parent = true
collision_layer = 8
collision_mask = 17
gravity_scale = 3.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="sprite" type="AnimatedSprite" parent="."]

[node name="collision" type="CollisionShape2D" parent="."]

[node name="particles" type="Particles2D" parent="."]
show_behind_parent = true
emitting = false
amount = 2
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = ExtResource( 1 )
texture = ExtResource( 3 )

[node name="anim_player" type="AnimationPlayer" parent="."]
anims/fly = SubResource( 1 )

[node name="lifetime" type="Timer" parent="."]
one_shot = true

[node name="AOE" type="Area2D" parent="."]
visible = false
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AOE"]
shape = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_bullet_body_entered"]
[connection signal="animation_finished" from="sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="timeout" from="lifetime" to="." method="_on_lifetime_timeout"]
